# ovh-certificate-api

./: .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile.debug  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pr.yaml  release.yaml
src/app/: constants.py  main.py
